# xmr-stak

./: CMakeLists.txt  bld_sh.sh
doc/: pint_hash256.b  pint_hash256_GlobalMap.txt  pools.txt
xmrstak/: params.hpp
xmrstak/backend/: backendConnector.cpp  cryptonight.hpp  iBackend.hpp  plugin.hpp  test_dl.c
xmrstak/backend/cpu/: minethd.cpp  minethd.hpp
xmrstak/backend/cpu/crypto/: build_test.sh  cryptonight.h  cryptonight_aesni.h  cryptonight_aesni.h.new  cryptonight_common.cpp  jh.txt  skein_port.h  test_hash.c
xmrstak/backend/pint/: CMakeLists.txt  autoAdjust.hpp  autoAdjustHwloc.hpp  config.tpl  jconf.cpp  jconf.cpp.ppu  jconf.hpp  jconf.hpp.ppu  minethd.cpp  minethd.hpp  pintType.cpp  pintType.hpp
xmrstak/backend/pint/uap/: build_dev.sh  c_blake256.cpp  c_blake256.h  c_groestl.cpp  c_groestl.h  c_jh.cpp  c_jh.h  c_jh_64.cpp  c_keccak.cpp  c_keccak.h  c_skein.cpp  c_skein.h  cryptonight.hpp  cryptonight_aesni.h  cryptonight_common.cpp  data.txt  hash.h  hash_ref.txt  keccak.txt  pint_hash256.cpp  pint_m128_op.cpp  pint_m128_op.hpp  pint_native.cpp  pint_native.h  pint_native_common.cpp  pint_native_common.h  pint_native_const.h  pint_native_dev.h  pint_soft_aes.hpp  pint_systolic.h  skein_port.h  test_functions.c  test_uap_pointer.cpp  test_util.py  uap_native.h  variant4_random_math.h  wallet.txt
xmrstak/misc/: executor.cpp  executor.hpp
